--- a/hw-1.1/index.html
+++ b/hw-1.1/index.html
@@ -14,87 +14,87 @@
 <body>
     <section class="section">
         <div class="search-part">
-            <input type="text" name="name-repo" id="search" placeholder="Введите название организации">
-            <button>
+            <input class="search-part__input" type="text" name="name-repo" id="search" placeholder="Введите название организации">
+            <button class="search-part__button">
                 <i class="fas fa-search"></i>
             </button>
         </div>
-        <div class="card-list">
-            <div class="card">
-                <div class="round">K</div>
-                <span class="text">
-                    <h4>kts-school-frontend</h4>
-                    <span class="kts">ktsstudio</span>
+        <div class="git-repo-list">
+            <div class="git-repo-tile">
+                <div class="git-repo-tile__logo">K</div>
+                <span class="git-repo-tile__content">
+                    <h4 class="git-repo-tile__title">kts-school-frontend</h4>
+                    <span class="git-repo-tile__company">ktsstudio</span>
                     <div>
-                        <span class="rate">
+                        <span class="git-repo-tile__rate">
                             <i class="far fa-star"></i>
                             <span>123</span>
                         </span>
-                        <span class="date">
+                        <span class="git-repo-tile__date">
                             Update 21 Jul
                         </span>
                     </div>
                 </span>
             </div>
-            <div class="card">
-                <div class="round">K</div>
-                <span class="text">
-                    <h4>kts-school-frontend</h4>
-                    <span class="kts">ktsstudio</span>
+            <div class="git-repo-tile">
+                <div class="git-repo-tile__logo">K</div>
+                <span class="git-repo-tile__content">
+                    <h4 class="git-repo-tile__title">kts-school-frontend</h4>
+                    <span class="git-repo-tile__company">ktsstudio</span>
                     <div>
-                        <span class="rate">
+                        <span class="git-repo-tile__rate">
                             <i class="far fa-star"></i>
                             <span>123</span>
                         </span>
-                        <span class="date">
+                        <span class="git-repo-tile__date">
                             Update 21 Jul
                         </span>
                     </div>
                 </span>
             </div>
-            <div class="card">
-                <div class="round">K</div>
-                <span class="text">
-                    <h4>kts-school-frontend</h4>
-                    <span class="kts">ktsstudio</span>
+            <div class="git-repo-tile">
+                <div class="git-repo-tile__logo">K</div>
+                <span class="git-repo-tile__content">
+                    <h4 class="git-repo-tile__title">kts-school-frontend</h4>
+                    <span class="git-repo-tile__company">ktsstudio</span>
                     <div>
-                        <span class="rate">
+                        <span class="git-repo-tile__rate">
                             <i class="far fa-star"></i>
                             <span>123</span>
                         </span>
-                        <span class="date">
+                        <span class="git-repo-tile__date">
                             Update 21 Jul
                         </span>
                     </div>
                 </span>
             </div>
-            <div class="card">
-                <div class="round">K</div>
-                <span class="text">
-                    <h4>kts-school-frontend</h4>
-                    <span class="kts">ktsstudio</span>
+            <div class="git-repo-tile">
+                <div class="git-repo-tile__logo">K</div>
+                <span class="git-repo-tile__content">
+                    <h4 class="git-repo-tile__title">kts-school-frontend</h4>
+                    <span class="git-repo-tile__company">ktsstudio</span>
                     <div>
-                        <span class="rate">
+                        <span class="git-repo-tile__rate">
                             <i class="far fa-star"></i>
                             <span>123</span>
                         </span>
-                        <span class="date">
+                        <span class="git-repo-tile__date">
                             Update 21 Jul
                         </span>
                     </div>
                 </span>
             </div>
-            <div class="card">
-                <div class="round">K</div>
-                <span class="text">
-                    <h4>kts-school-frontend</h4>
-                    <span class="kts">ktsstudio</span>
+            <div class="git-repo-tile">
+                <div class="git-repo-tile__logo">K</div>
+                <span class="git-repo-tile__content">
+                    <h4 class="git-repo-tile__title">kts-school-frontend</h4>
+                    <span class="git-repo-tile__company">ktsstudio</span>
                     <div>
-                        <span class="rate">
+                        <span class="git-repo-tile__rate">
                             <i class="far fa-star"></i>
                             <span>123</span>
                         </span>
-                        <span class="date">
+                        <span class="git-repo-tile__date">
                             Update 21 Jul
                         </span>
                     </div>
